--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ serde_json = "1.0.122"
 sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
 time = "0.3.36"
 tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
-tower-http = { version = "0.5.2", features = ["cors"] }
+tower-http = { version = "0.5.2", features = ["cors", "fs"] }
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
 validator = { version = "0.16", features = ["derive"] }
