--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.0"
 rand_core = { version = "0.6.4", features = ["std"] }
-serde = { version = "1.0.205", features = ["derive"] }
-serde_json = "1.0.122"
-sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
+redis = "0.26.1"
+serde = { version = "1.0.209", features = ["derive"] }
+serde_json = "1.0.127"
+sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
 time = "0.3.36"
-tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
-tower-http = { version = "0.5.2", features = ["cors", "fs"] }
+tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
+tower-http = { version = "0.5.2", features = ["cors", "trace"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
-validator = { version = "0.16", features = ["derive"] }
+validator = { version = "0.18.1", features = ["derive"] }
