--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "app"
+name = "server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,16 +9,13 @@ axum = "0.7.5"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
-jsonwebtoken = "9.3.0"
-rand_core = { version = "0.6.4", features = ["std"] }
-redis = "0.26.1"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
 time = "0.3.36"
 tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
-tower-http = { version = "0.5.2", features = ["cors", "trace"] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
+tower-sessions = "0.12.3"
+tower-sessions-redis-store = "0.13.0"
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
 validator = { version = "0.18.1", features = ["derive"] }
