--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = "0.7.5"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
+lazy_static = "1.5.0"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
