--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,7 @@ tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
 tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
 tower-sessions = "0.12.3"
 tower-sessions-redis-store = "0.13.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
 validator = { version = "0.18.1", features = ["derive"] }
